--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <footer class="footer">
-            <p>Desenvolvido por <a href="index.html">Julio Santos</a>, com apoio <a href="">Simbios ♥</a></p>
+            <p>Desenvolvido por <a href="index.html">Julio Santos</a>, com apoio <a href="">Simbiose ♥</a></p>
         </footer>
 
         
